# typed_index_collection

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: collection.rs  error.rs  lib.rs  macros.rs
