[package]
name = "collections"
description = "Manage collection of objects"
version = "1.0.0"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CanalTP/collections"
keywords = ["collection", "index"]

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "1"
