[package]
name = "typed_index_collection"
description = "Manage collection of objects"
version = "1.0.1"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CanalTP/typed_index_collection"
homepage = "https://github.com/CanalTP/typed_index_collection"
documentation = "https://docs.rs/typed_index_collection"
keywords = ["collection", "index"]

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "1"
