[package]
name = "typed_index_collection"
description = "Manage collection of objects"
version = "2.2.0"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hove-io/typed_index_collection"
homepage = "https://github.com/hove-io/typed_index_collection"
documentation = "https://docs.rs/typed_index_collection"
keywords = ["collection", "index"]

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
thiserror = "1"

[dev-dependencies]
testing_logger = "0.1"

[features]
expose-inner = []
